--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,7 +10,7 @@
     
     {% for post in posts %}
       <div>
-        <p>published: {{ post.published_date|date:"d M Y" }}</p>
+        <p><em>published: {{ post.published_date|date:"H:i d M Y" }}</em></p>
         <h1><a href="">{{ post.title }}</a></h1>
         <p>{{ post.text|linebreaks }}</p>
       </div>
