--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,34 @@
+{% load staticfiles %}
+
 <html>
   <head>
     <meta charset="UTF-8">
     <title>Ordinary blog</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
   </head>
   <body>
-    <div>
+    <div class="page-header">
       <h1><a href="/">Ordinary blog</a></h1>
     </div>
     
-    {% for post in posts %}
-      <div>
-        <p><em>published: {{ post.published_date|date:"H:i d M Y" }}</em></p>
-        <h2><a href="">{{ post.title }}</a></h2>
-        <p>{{ post.text|linebreaks }}</p>
+    <div class="content container">
+      <div class="row">
+        <div class="col-md-8">
+          {% for post in posts %}
+            <div class="post">
+              <div class="date">
+                {{ post.published_date }}
+              </div>
+              <h1><a href="">{{ post.title }}</a></h1>
+              <p>{{ post.text|linebreaks }}</p>
+            </div>
+          {% endfor %}
+        </div>
       </div>
-    {% endfor %}
+    </div>
+
   </body>
 </html>
